[gd_scene load_steps=4 format=3 uid="uid://babsqa0jo7n16"]

[ext_resource type="FontFile" uid="uid://og8aswnpedua" path="res://Assets/Fonts/manrope/manrope-bold.otf" id="1_d0ora"]
[ext_resource type="Script" path="res://Scripts/DialogueBox.gd" id="1_meebp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tv5os"]

[node name="DialogueBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -448.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_meebp")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_tv5os")

[node name="DialogueText" type="Label" parent="BackgroundPanel"]
layout_mode = 0
offset_left = 21.0
offset_top = 16.0
offset_right = 408.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_d0ora")
theme_override_font_sizes/font_size = 32
text = "Placeholder text"
autowrap_mode = 2

[node name="NextButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -191.0
offset_top = 136.0
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 0
text = "NextButton"
